--- a/projects/03_presentation_website/style.css
+++ b/projects/03_presentation_website/style.css
@@ -6,6 +6,10 @@
   --animate-speed: 2s;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
