--- a/projects/03_presentation_website/style.css
+++ b/projects/03_presentation_website/style.css
@@ -6,9 +6,9 @@
   --animate-speed: 2s;
 }
 
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 
 body {
   font-family: Arial, Helvetica, sans-serif;
